<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/movie_review_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_author"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/movie_review_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="4"
        android:text="@string/review_text"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/view_full_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="8dp"
        android:text="@string/view_full_review"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/deep_orange"
        android:textStyle="italic"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_grey"/>
</LinearLayout>