<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="@dimen/movie_poster_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/poster_description"/>

        <ImageView
            android:id="@+id/movie_thumbnail"
            android:layout_width="@dimen/movie_thumbnail_size"
            android:layout_height="@dimen/movie_thumbnail_size"
            android:layout_alignBottom="@+id/movie_poster"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="@dimen/common_padding"
            android:layout_marginLeft="@dimen/common_padding"
            android:background="@color/black"
            android:contentDescription="@string/thumbnail_description"
            android:padding="@dimen/border_padding"/>

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/movie_thumbnail"
            android:layout_marginLeft="@dimen/common_padding"
            android:layout_marginTop="@dimen/movie_name_align"
            android:layout_toRightOf="@+id/movie_thumbnail"
            android:text="@string/movie_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/movie_name_size"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/movie_detail_height"
            android:layout_below="@+id/movie_poster"
            android:layout_centerHorizontal="true"
            android:background="@color/light_grey"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/movie_release_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_release"
                android:gravity="center"
                android:paddingLeft="@dimen/common_padding"
                android:paddingRight="@dimen/common_padding"
                android:text="@string/placeholder_release_date"
                android:textSize="@dimen/movie_detail_text_size"/>

            <TextView
                android:id="@+id/movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_rating"
                android:gravity="center"
                android:paddingLeft="@dimen/common_padding"
                android:paddingRight="@dimen/common_padding"
                android:text="@string/placeholder_rating"
                android:textSize="@dimen/movie_detail_text_size"/>
        </LinearLayout>

        <TextView
            android:id="@+id/movie_synopsis_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/movie_thumbnail"
            android:layout_below="@+id/linearLayout"
            android:layout_marginTop="@dimen/common_padding_half"
            android:text="@string/synopsis"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/movie_synopsis_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/movie_synopsis_label"
            android:layout_below="@+id/movie_synopsis_label"
            android:layout_marginBottom="@dimen/common_padding"
            android:layout_marginRight="@dimen/common_padding"
            android:text="New Text"/>

    </RelativeLayout>
</ScrollView>
