<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="@dimen/movie_poster_height"
            android:contentDescription="@string/poster_description"
            android:scaleType="centerCrop"/>

        <android.support.v7.widget.CardView
            android:id="@+id/movie_main_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_view_margin"
            card_view:cardCornerRadius="@dimen/cardview_default_radius"
            card_view:contentPadding="@dimen/common_padding_small">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/common_padding_small">

                <TextView
                    android:id="@+id/movie_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="@dimen/movie_name_right_margin"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/placeholder_movie_name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/movie_name_size"/>

                <ImageButton
                    android:id="@+id/movie_favourite_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/favorites_description"
                    android:src="@drawable/favourite_icon_selector"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/movie_details_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/card_view_margin"
            android:layout_marginLeft="@dimen/card_view_margin"
            android:layout_marginRight="@dimen/card_view_margin"
            card_view:cardCornerRadius="@dimen/cardview_default_radius"
            card_view:contentPadding="@dimen/common_padding_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/details"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_marginLeft="@dimen/common_padding_small"
                    android:layout_marginRight="@dimen/common_padding_small"
                    android:background="@color/deep_orange"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/common_padding_small">

                    <TextView
                        android:id="@+id/movie_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:drawableLeft="@drawable/ic_release"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:text="@string/placeholder_release_date"
                        android:textSize="@dimen/movie_detail_text_size"/>

                    <ImageView
                        android:id="@+id/movie_adult_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:contentDescription="@string/adult_icon_description"
                        android:src="@drawable/ic_adult"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/common_padding_small">

                    <TextView
                        android:id="@+id/movie_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:drawableLeft="@drawable/ic_rating"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:text="@string/placeholder_rating"
                        android:textSize="@dimen/movie_detail_text_size"/>

                    <TextView
                        android:id="@+id/movie_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:drawableLeft="@drawable/ic_runtime"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:text="@string/placeholder_runtime"
                        android:textSize="@dimen/movie_detail_text_size"
                        android:textStyle="italic"/>
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/movie_synopsis_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/card_view_margin"
            android:layout_marginLeft="@dimen/card_view_margin"
            android:layout_marginRight="@dimen/card_view_margin"
            card_view:cardCornerRadius="@dimen/cardview_default_radius"
            card_view:contentPadding="@dimen/common_padding_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/synopsis"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_marginLeft="@dimen/common_padding_small"
                    android:layout_marginRight="@dimen/common_padding_small"
                    android:background="@color/deep_orange"/>

                <TextView
                    android:id="@+id/movie_synopsis_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/common_padding_small"
                    android:text="@string/synopsis"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/movie_trailers_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/card_view_margin"
            android:layout_marginLeft="@dimen/card_view_margin"
            android:layout_marginRight="@dimen/card_view_margin"
            card_view:cardCornerRadius="@dimen/cardview_default_radius"
            card_view:contentPadding="@dimen/common_padding_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/trailers"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_marginLeft="@dimen/common_padding_small"
                    android:layout_marginRight="@dimen/common_padding_small"
                    android:background="@color/deep_orange"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:id="@+id/movie_trailer_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>

                    <ListView
                        android:id="@+id/movie_trailer_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none"/>
                </FrameLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/movie_reviews_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/card_view_margin"
            android:layout_marginLeft="@dimen/card_view_margin"
            android:layout_marginRight="@dimen/card_view_margin"
            card_view:cardCornerRadius="@dimen/cardview_default_radius"
            card_view:contentPadding="@dimen/common_padding_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/reviews"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_marginLeft="@dimen/common_padding_small"
                    android:layout_marginRight="@dimen/common_padding_small"
                    android:background="@color/deep_orange"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:id="@+id/movie_reviews_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/movie_reviews_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </FrameLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
